_sass/sections/_index.scss
.marquee > .container-fluid {
  padding-top: 111px;
  padding-bottom: 111px;
}

.phone-dialer {

}

header.marquee {
    color: white;
    text-align: center;
    padding: 75px 0;
    @include background-texture;
    .marquee-brand {
        font-size: 4rem;
        line-height: 4rem;
        @include heading-font;
    }
    .marquee-heading {
        font-size: 1.25rem;
        margin: 10px 0 0;
    }
    ul.list-inline {
        margin-top: 25px;
        margin-bottom: 0;
        li a {
            position: relative;
        }
    }
    a.marquee-img {
        position: relative;
        bottom: 0;
        display: inline-block;
        margin: 20px auto 0;
    }
    @media(max-width: 554px) {
        .cell {
            width:80%;
        }
    }
    @media(min-width: 768px) {
        padding: 100px 0;
        .marquee-brand {
            font-size: 5rem;
            line-height: 6rem;
        }
        .marquee-heading {
            font-size: 1.5rem;
            margin: 0;
        }
    }
    @media(min-width: 992px) {
        padding: 100px 0;
        .marquee-brand {
            font-size: 6rem;
            line-height: 7rem;
        }
        .marquee-heading {
            font-size: 2rem;
            margin: 0;
        }
    }
}

section.intro {
    text-align: center;
    padding: 50px 0 25px;
    p.lead {
        margin-bottom: 10px;
    }
}

section.themes {
    padding: 50px 0;
}

section.premium {
    text-align: center;
    padding: 30px 0;
    h2 {
        margin-top: 5px;
    }
    p.lead {
        margin-bottom: 30px;
    }
}

hr.hr-home {
    max-width: 125px;
    margin: 0 auto;
}

